--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <body>
   <script src="https://accounts.google.com/gsi/client" async defer></script> 
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-FUMSFUJ4.js" type="module"></script></body>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-UWAODVRT.js" type="module"></script></body>
 </html>
